--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://rbh007.github.io/bit-xpert"
+baseurl = "http://rbh007.github.io/bit-xpert/"
 languageCode = "en-us"
 title = "Hugo Creative Theme"
 theme = "hugo-creative-theme"
