--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "http://rbh007.github.io/bit-xpert/"
-languageCode = "en-us"
-title = "Hugo Creative Theme"
+languageCode = "ro"
+title = "Bit-Xpert"
 theme = "hugo-creative-theme"
 canonifyurls = true
 
@@ -19,9 +19,12 @@ canonifyurls = true
 	# For more informtion take a look at the README.
 
 	# To provide some metadata for search engines feel free to add a few
-    # information about you and your website.
-	name = "Your name"
-	description = "Your description"
+        # information about you and your website.  name = "Bit-Xpert"
+	description = "Bit-Xpert va ofera la preturi negociabile
+	servicii de instalare / inlocuire / diagnosticare / testare
+	componente hardware, recuperari date, devirusari, instalari / configurari
+	software si echipamente periferice, configurari retele,
+	consultanta IT"
 
 	# The path must be relative to the static folder
 	favicon = "favicon.ico"
@@ -29,73 +32,81 @@ canonifyurls = true
 
 	# Navigation
 	[params.navigation]
-		brand = "Hugo Creative Theme"
+		brand = "Bit-Xpert"
 
 		[params.navigation.links]
-			about     = "About"
-			services  = "Services"
-			portfolio = "Portfolio"
+			about     = "Despre noi"
+			services  = "De ce noi"
+			portfolio = "Servicii"
 			contact   = "Contact"
 
 
 	# Hero section
 	[params.hero]
-		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
-		slogan     = "Your awesome slogan"
-		subtitle   = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis nesciunt consequatur ut nihil voluptatem fugiat eos eveniet alias in veniam?"
-		buttonText = "Find out more"
+		# To change the background of the hero section,
+		# replace the 'header.jpg' at './static/img' with your
+		# own.
+		slogan     = "Bit-Xpert Service"
+		subtitle   = ""
+		buttonText = "Afla Mai Multe"
 
 
 	# About section
 	[params.about]
-		headline    = "We've got what you need!"
-		description = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Praesentium similique eos eligendi error veritatis harum, sed aliquid totam, quam minus neque enim est architecto, ad. Maiores, aliquid, vitae!"
-		buttonText  = "Get started!"
+		headline    = "Probleme cu calculatorul?"
+		description = "Bit-Xpert Va ofera la preturi
+		negociabile servicii de Instalare / Inlocuire /
+		Diagnosticare / Testare componente Hardware ,
+		Instalari / Reinstalari / Configurari SO, Recuperari
+		Date, Devirusari, Instalari / Configurari Software si
+		Echipamente Periferice, Configurari Retele,
+		Consultanta IT."
+		buttonText  = "Avantaje"
 
 
 	# Service section
 	[params.services]
-		headline = "At your service"
+		headline = "De ce noi?"
 
         [[params.services.list]]
-            icon = "fa-diamond"
-            title = "Sturdy Templates"
-            description = "Our templates are updated regularly so they don't break."
+            icon = "fa-eur"
+            title = "Preturi negociabile"
+            description = "Indiferent de proiect, beneficiati de preturi competitive"
 
         [[params.services.list]]
-			icon = "fa-paper-plane"
-			title = "Ready to Ship"
-			description = "You can use this theme as is, or you can make changes!"
+			icon = "fa-cogs"
+			title = "Consultanta"
+			description = "Solutionarea rapida a neclaritatilor dvs."
 
 		[[params.services.list]]
-            icon = "fa-newspaper-o"
-            title = "Up to Date"
-            description = "We update dependencies to keep things fresh."
+            icon = "fa-bullhorn"
+            title = "Reduceri"
+            description = "Discount substantial la prima interventie"
 
         [[params.services.list]]
-            icon = "fa-heart"
-            title = "Made with Love"
-            description = "You have to make your websites with love these days!"
+            icon = "fa-rocket"
+            title = "Raspuns rapid"
+            description = "Preluare / predare rapida a echipamentelor"
 
 
     # Portfolio modals
 	[params.portfolio.modal]
-        client = "Client"
-        date = "Date"
-        category = "Category"
-        buttonText = "Close"
+        client = ""
+        date = ""
+        category = ""
+        buttonText = "Inchide"
 
     # Aside section
 	[params.aside]
-		headline = "Get the Creative Theme for Hugo"
+		headline = "Pentru lista completa a serviciilor va rugam folositi informatiile de contact"
 
 		[params.aside.button]
-			text = "Download now"
-			link = "//github.com/digitalcraftsman/hugo-creative-theme"
+			text = "Contact"
+			link = "#contact"
 
 	# Contact section
 	[params.contact]
-		headline = "Let's Get In Touch!"
-		description = "Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!"
-		phone = "123-456-6789"
-		email = "feedback@startbootstrap.com"
+		headline = "Contactati Xpertul"
+		description = "Pentru orice fel de nelamuriri nu ezitati sa ne contactati."
+		phone = "0765 666 676"
+		email = "bit.xpert.it@gmail.com"
