--- a/data/projects/Retelistica.yaml
+++ b/data/projects/Retelistica.yaml
@@ -5,4 +5,4 @@ img: Retelistica.jpg
 #client: Start Bootstrap
 #clientLink: "#"
 category: Bit-Xpert.net
-description: Configurari Echipamente Retelistics
+description: Configurari Echipamente Retelistica
