modificare ordine proiecte

--- a/data/projects/3_Devirusare.yaml
+++ b/data/projects/3_Devirusare.yaml
@@ -1,8 +1,8 @@
-modalID: 4
+modalID: 3
 title: Devirusare
 #date: 2014-07-10
 img: Devirusare.jpg
 #client: Start Bootstrap
 #clientLink: "#"
 category: Bit-Xpert.net
-description: Devirusari
+description: Asiguram devirusarea calculatoarelor si a retelelor de calculatoare.
