--- a/data/projects/4_Recuperari-Date.yaml
+++ b/data/projects/4_Recuperari-Date.yaml
@@ -1,8 +1,8 @@
-modalID: 2
+modalID: 4
 title: Recuperari Date
 #date: 2014-07-07
 img: Recuperari-Date.jpg
 #client: Start Bootstrap
 #clientLink: "#"
 category: Bit-Xpert.net
-description: Recuperari date defecte logice si fizice
+description: Recuperari date defecte logice si fizice.
