--- a/data/projects/5_Upgrade.yaml
+++ b/data/projects/5_Upgrade.yaml
@@ -1,8 +1,8 @@
-modalID: 1
+modalID: 5
 title: Upgrade
 img: Upgrade.jpg
 #clientLink: "#"
 category: Bit-Xpert.net
-description: Instalare / Inlocuire / Diagnosticare / Testare componente Hardware
+description: Instalare / Inlocuire / Diagnosticare / Testare componente Hardware.
 #date: 2014-07-05
 #client: Start Bootstrap
