--- a/data/projects/6_Backup.yaml
+++ b/data/projects/6_Backup.yaml
@@ -1,8 +1,8 @@
-modalID: 3
+modalID: 6
 title: BackUP
 #date: 2014-07-08
 img: Backup.jpg
 #client: Start Bootstrap
 #clientLink: "#"
 category: Bit-Xpert.net
-description: Implementare sisteme de Backup automat al datelor
+description: Implementare sisteme de Backup automat al datelor.
